# retrievvy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  playground.py  pyproject.toml
_scripts/: pdf_loader.py
retrievvy/: __init__.py  __main__.py  chunks.py  config.py  database.py  embeddings.py  hits.py  index.py  rerank.py  stats.py
retrievvy/index/: dense.py
retrievvy/indexes/: dense.py  sparse.py
retrievvy/nlp/: embeddings.py  keywords.py
retrievvy/webserver/: __init__.py  bundles.py  hits.py  indexes.py  middleware.py  vectors.py
