[project]
name = "retrievvy"
version = "0.1.0"
description = "Fast retrieval system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie>=0.5.1",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "numpy>=2.2.4",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=3.4.1",
    "stanza>=1.10.1",
    "starlette>=0.46.1",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
    "xapian-bindings>=0.1.0",
    "yake>=0.4.8",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
